--- a/task-list-front-end/src/App.css
+++ b/task-list-front-end/src/App.css
@@ -27,3 +27,28 @@
 .App-link {
   color: #61dafb;
 }
+
+.main-app {
+  display: flex;
+  align-items: center;
+  margin-top: 5vh;
+}
+
+/* .task-list-container {
+  width: 100%;
+} */
+
+.to-do {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-top: 0;
+  margin-left: 15vh;
+  margin-right: auto;
+}
+
+.to-do-title {
+  margin: 0;
+  font-size: 2em;
+}
