--- a/task-list-front-end/src/App.css
+++ b/task-list-front-end/src/App.css
@@ -29,18 +29,16 @@
 }
 
 .main-app {
-  display: flex;
-  align-items: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
   margin-top: 5%;
   margin: 5%;
   justify-content: center;
   flex-direction: row;
 }
 
-.to-do, .task-list-container{
-  display: flex; 
-  flex-direction: column;
-  align-items: center; 
+.task-list-container{
+  align-items: top; 
   margin: auto;
   margin-left: 0vh;
   width: 50vh;
@@ -54,9 +52,6 @@
 }
 
 .task-form {
-  align-items: center;
-  justify-content: center;
-  margin-top: 0;
   margin-left: 5%;
   margin-right: 15%;
 }
